force-app/main/default/objects/copado__Snapshot_Difference__c/fields/copado__Destination_Option__c.field-meta.xml
<CustomField>
    <fullName>copado__Destination_Option__c</fullName>
    <label>Destination Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Git Commit</fullName>
            </value>
            <value>
                <fullName>Salesforce Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>