force-app/main/default/objects/copado__Snapshot_Difference__c/fields/copado__Destination_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>copado__Destination_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Snapshot Differences (Destination Credential)</relationshipLabel>
    <relationshipName>Snapshot_Differences1</relationshipName>
    <type>Lookup</type>
</CustomField>