force-app/main/default/objects/copado__Snapshot_Difference__c/fields/copado__Format__c.field-meta.xml
<CustomField>
    <fullName>copado__Format__c</fullName>
    <description>Salesforce configuration files are in the XML format. You can change it to a different format for a faster comparison time and better readability of the differences.</description>
    <inlineHelpText>Salesforce configuration files are in the XML format. You can change it to a different format for a faster comparison time and better readability of the differences.</inlineHelpText>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XML</fullName>
                <default>true</default>
                <label>XML</label>
            </value>
            <value>
                <fullName>YAML</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>