force-app/main/default/objects/copado__Snapshot_Difference__c/fields/copado__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>