force-app/main/default/objects/copado__Snapshot_Difference__c/fields/copado__Source_Git_Commit__c.field-meta.xml
<CustomField>
    <fullName>copado__Source_Git_Commit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Git Commit</label>
    <referenceTo>copado__Git_Org_Commit__c</referenceTo>
    <relationshipLabel>Snapshot Differences</relationshipLabel>
    <relationshipName>Snapshot_Differences</relationshipName>
    <type>Lookup</type>
</CustomField>